[thirdparty] Added Eigen3 to project.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,10 +7,11 @@ set(NANO_VERSION_MAJOR 0)
 set(NANO_VERSION_MINOR 1)
 set(NANO_VERSION "${OCRTOOL_VERSION_MAJOR}.${OCRTOOL_VERSION_MINOR}")
 
-if( CMAKE_BINARY_DIR STREQUAL CMAKE_SOURCE_DIR )
-    message( FATAL_ERROR "Please select another Build Directory!" )
+if(CMAKE_BINARY_DIR STREQUAL CMAKE_SOURCE_DIR)
+    message(FATAL_ERROR "Please select another Build Directory!")
 endif()
 
+# Compiler settings
 if(MSVC)
     # Force to always compile with W4
     if(CMAKE_CXX_FLAGS MATCHES "/W[0-4]")
@@ -23,14 +24,17 @@ elseif(CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wno-long-long -pedantic")
 endif()
 
-find_package(OpenCV COMPONENTS opencv_core opencv_highgui opencv_objdetect opencv_text)
-if (OpenCV_FOUND)
-    include_directories("${OpenCV_INCLUDE_DIRS}")
+# Eigen3: A C++ template library for linear algebra: vectors, matrices, and related algorithms.
+set(EIGEN3_MINIMUM_VERSION 3.1.2)
+find_package(Eigen3 ${EIGEN3_MINIMUM_VERSION})
+if (EIGEN3_FOUND)
+    include_directories("${EIGEN3_INCLUDE_DIR}")
 else()
-    message( SEND_ERROR "Failed to find OpenCV" )
+    message(SEND_ERROR "Failed to find Eigen ${EIGEN3_MINIMUM_VERSION}")
     return()
 endif()
 
+# Root directory
 set(NANO_ROOT_DIR ${PROJECT_SOURCE_DIR})
 
 # configure a header file to pass some of the CMake settings
@@ -69,7 +73,7 @@ target_link_libraries(${PROJECT_NAME}
                       ${NANO_SHARED_LIBRARY}
                       )
 
-# tests
+# Unit tests by Google Testing Framework
 #include_directories("${NANO_SHARED_LIBRARY}/thirdparty/gtest/include")
 #add_subdirectory("${NANO_SHARED_LIBRARY}/thirdparty/gtest/src/gtest/")
 #add_subdirectory("${NANO_SHARED_LIBRARY}/tests")
